# AI_Sales_Trainer_backend

./: .env.example  .gitignore  README.md  TEST_GUIDE.md  pyproject.toml
app/: config.py  main.py
app/api/: auth.py  dashboard.py  feedback.py  messages.py  reports.py  scenarios.py  schemas.py  sessions.py
app/data/scenarios/: cloud_security.json  diabetes_drug.json  education_ai.json  enterprise_saas.json  luxury_auto.json  oncology_immunotherapy.json  wealth_management.json
app/graph/: builder.py  routing.py  state.py
app/graph/nodes/: evaluator.py  state_updater.py  strategist_persona.py
app/llm/: provider.py  structured_output.py
app/memory/: context_compressor.py  mem0_manager.py
app/models/: db.py  scenario.py
app/prompts/: metadata.yaml  registry.py
app/prompts/v1/: evaluator.txt  report.txt  strategist_persona.txt
app/services/: dashboard_service.py  report_service.py  session_service.py
scripts/: auto_test.py  newbie_messages.json  test_aggressive.json  test_data_dump.json  test_defensive.json  test_long_conversation.json  test_offtopic.json  test_wrong_data.json
tests/: e2e_test.py  test_api.py  test_evaluator_accuracy.py  test_graph_flow.py
